# meta

./: ArcadesGOTM.txt  ConsoleGOTM.txt  MAME.xml  puzzler.txt
.github/workflows/: verify-menu-xml.yml
tools/xmlcheck/: CMakeLists.txt  README.md  XmlGameDuplicateFinder.cpp
